# quantumedge

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: main.tsx  styles.css
docs/: api.md  architecture.md  onboarding-analysts.md  onboarding-developers.md  onboarding-quants.md
examples/: boutique-wealth-desk.csv
scripts/: bootstrap.sh
services/python-optimizer/: pyproject.toml
services/python-optimizer/quantumedge_optimizer/: main.py  optimizer.py
services/python-optimizer/quantumedge_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/python-optimizer/tests/: test_optimizer.py
services/rust-api/: Cargo.toml  Dockerfile
services/rust-api/src/: main.rs
