[package]
name = "quantumedge-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
